# chimera

./: .clang-format  .gitignore  GenerateProjectFiles.bat  GenerateProjectFiles.sh  README.md  test.sh
.github/workflows/: cmake-multi-platform.yml  cmake-multi-platfrom.yml
engine/: CMakeLists.txt  Config.cmake.in
engine/asset/shader/: simple.fs  simple.vs
engine/include/: Chimera.h
engine/internal/: CmUtil.h
engine/internal/cm_util/: Assert.h
engine/source/core/: Application.cpp  Application.h  DeltaTime.cpp  DeltaTime.h  Input.h  KeyCode.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Logger.cpp  Logger.h  MouseCode.h  Pch.h  Time.cpp  Time.h  Window.cpp  Window.h
engine/source/event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
engine/source/imgui/: ImguiLayer.cpp  ImguiLayer.h
engine/source/platform/input/: MacOSInput.cpp
engine/source/platform/opengl/: OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLRenderAPI.cpp  OpenGLRenderAPI.h  OpenGLRenderContext.cpp  OpenGLRenderContext.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  (+2 more)
engine/source/render/: Buffer.h  Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  PerspectiveProjection.cpp  PerspectiveProjection.h  Projection.h  RenderAPI.cpp  RenderAPI.h  RenderCommand.cpp  RenderCommnad.h  RenderContext.cpp  RenderContext.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
engine/test/: CMakeLists.txt  TestMain.cpp
scop/: CMakeLists.txt  setup.bat
scop/source/: Scop.cpp
(+2 files in other folders)
